Remove Image functionality

--- a/14_product_crud/styles.css
+++ b/14_product_crud/styles.css
@@ -7,4 +7,37 @@ body {
     height: auto;
 }
 
-.product-img-view { width:120px; }
+.product-img-view {
+    width: 120px;
+}
+
+label.myLabel input[type="file"] {
+    position: absolute;
+    top: -1000px;
+}
+
+/***** Example custom styling *****/
+.myLabel {
+    border: 2px solid #AAA;
+    border-radius: 4px;
+    padding: 2px 5px;
+    margin: 2px;
+    background: #DDD;
+    display: inline-block;
+}
+
+.myLabel:hover {
+    background: #CCC;
+}
+
+.myLabel:active {
+    background: #CCF;
+}
+
+.myLabel :invalid+span {
+    color: #A44;
+}
+
+.myLabel :valid+span {
+    color: #4A4;
+}
